====
News
====

..
  2015-xx-xx Version 0.11.4 released
  ==================================

  Changes affecting backwards compatibility
  -----------------------------------------

  - The ``miliseconds`` property of ``times.TimeInterval`` is now ``milliseconds``.
    Code accessing that property is deprecated and code using ``miliseconds``
    during object initialization or as a named parameter of ``initInterval()``
    will need to be updated.
  - ``std.logging`` functions no longer do formatting and semantically treat
    their arguments just like ``echo`` does. Affected functions: ``log``,
    ``debug``, ``info``, ``warn``, ``error``, ``fatal``. Custom subtypes of
    ``Logger`` also need to be adjusted accordingly.
  - Floating point numbers can now look like ``2d`` (float64)
    and ``2f`` (float32) which means imports like ``import scene/2d/sprite``
    do not work anymore. Instead quotes have to be
    used: ``import "scene/2d/sprite"``. The former code never was valid Nim.
  - The Windows API wrapper (``windows.nim``) is now not part of the official
    distribution anymore. Instead use the ``oldwinapi`` Nimble package.
  - There is now a clear distinction between ``--os:standalone``
    and ``--gc:none``. So if you use ``--os:standalone`` ensure you also use
    ``--gc:none``. ``--os:standalone`` without ``--gc:none`` is now a version
    that doesn't depend on any OS but includes the GC. However this version
    is currently untested!
  - All procedures which construct a ``Socket``/``AsyncSocket`` now need to
    specify the socket domain, type and protocol. The param name
    ``typ: SockType`` (in ``newSocket``/``newAsyncSocket`` procs) was also
    renamed to ``sockType``. The param ``af`` in the ``connect`` procs was
    removed. This affects ``asyncnet``, ``asyncdispatch``, ``net``, and
    ``rawsockets``.
  - ``varargs[typed]`` and ``varargs[untyped]`` have been refined and now work